// ============================================================
// LoreGraph — ERD (Entity Relationship Diagram)
// Конструктор интерактивных вики с графом связей
// Database: PostgreSQL 17 (в Docker)
// Стек: Flask + SQLAlchemy 2.0 + Flask-Login
// Format: DBML (https://dbdiagram.io)
// ============================================================
// Доступ к данным контролируется в Flask-слое:
//   @login_required + проверка владения миром
//   (world.user_id == current_user.id).
// RLS-политик в Postgres нет — это сознательное решение,
// обусловленное стеком (Flask-приложение само управляет правами).
// ============================================================

// ─────────────────────────────────────────────
// 1. ПОЛЬЗОВАТЕЛИ
// ─────────────────────────────────────────────

Table users {
  id uuid [pk, default: `gen_random_uuid()`, note: 'Первичный ключ']
  email text [not null, unique, note: 'Email пользователя — для входа']
  password_hash text [note: 'bcrypt-хэш пароля. NULL у юзеров, зарегистрированных только через Google OAuth']
  display_name text [note: 'Отображаемое имя (мин 1, макс 100 символов)']
  avatar_url text [note: 'URL аватара. /static/uploads/avatars/<user_id>/... если загружен локально, либо https://lh3...googleusercontent.com/... после входа через Google']
  role text [not null, default: 'user', note: 'Роль: user | admin (CHECK constraint)']
  is_blocked boolean [not null, default: false, note: 'Флаг блокировки. Управляется админом из /admin/users']
  google_sub text [unique, note: 'Google subject (id) — заполняется при первом OAuth-входе. NULL у email-only юзеров']
  created_at timestamptz [not null, default: `now()`, note: 'Дата регистрации']
  last_sign_in timestamptz [note: 'Последний успешный вход']

  note: 'Пользователи системы. Создаются: (а) через POST /auth/register с email+паролем, (б) через POST /auth/google/callback после успешного OAuth. Flask-Login хранит сессию в подписанной cookie.'

  indexes {
    email [name: 'idx_users_email']
    google_sub [name: 'idx_users_google_sub']
  }
}

// ─────────────────────────────────────────────
// 2. МИРЫ (Worlds — то же что projects в исходном ТЗ)
// ─────────────────────────────────────────────

Table worlds {
  id uuid [pk, default: `gen_random_uuid()`, note: 'Первичный ключ']
  user_id uuid [not null, ref: > users.id, note: 'Владелец мира. ON DELETE CASCADE — при удалении юзера его миры удаляются']
  title text [not null, note: 'Название (мин 1, макс 100 символов)']
  description text [note: 'Краткое описание (макс 500 символов в форме, в БД без лимита)']
  cover_url text [note: 'URL обложки мира (на v1 не используется — задел на будущее)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Обновляется приложением (SQLAlchemy onupdate=now())']

  note: 'Мир (раньше — project). У каждого пользователя их может быть много. При создании мира приложение сразу сидит 5 предустановленных категорий через World.seed_default_categories().'

  indexes {
    user_id [name: 'idx_worlds_user_id']
  }
}

// ─────────────────────────────────────────────
// 3. КАТЕГОРИИ
// ─────────────────────────────────────────────

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  world_id uuid [not null, ref: > worlds.id, note: 'Мир-родитель. ON DELETE CASCADE']
  name text [not null, note: 'Название (Персонаж, Локация, Монстр…)']
  color text [not null, default: '#3B82F6', note: 'HEX-цвет в формате #RRGGBB. Влияет на цвет узла в графе и бейдж статьи']
  icon text [note: 'Имя иконки (не используется в v1 — задел)']
  weight int [not null, default: 3, note: 'Вес 1-5. Влияет на размер узла в графе: size = 14 + weight*5 px (CHECK constraint)']
  template_fields jsonb [not null, default: `'[]'`, note: 'Список полей шаблона: [{key, label, type: text|textarea|date}]. Появляются над текстом статьи как подсказки для автора']
  sort_order int [not null, default: 0, note: 'Порядок отображения в списке']
  created_at timestamptz [not null, default: `now()`]

  note: 'Категории сущностей внутри мира. 5 предустановленных при создании мира: Персонаж (#3B82F6, weight=4), Локация (#10B981, weight=4), Событие (#F59E0B, weight=2), Предмет (#EF4444, weight=2), Фракция (#8B5CF6, weight=5). Пользователь может добавлять свои через /worlds/<id>/categories.'

  indexes {
    world_id [name: 'idx_categories_world_id']
    (world_id, name) [unique, name: 'uq_categories_world_name']
  }
}

// ─────────────────────────────────────────────
// 4. СТАТЬИ
// ─────────────────────────────────────────────

Table articles {
  id uuid [pk, default: `gen_random_uuid()`]
  world_id uuid [not null, ref: > worlds.id, note: 'Мир. ON DELETE CASCADE']
  category_id uuid [ref: > categories.id, note: 'Категория. NULL разрешён (статья без категории). ON DELETE SET NULL — при удалении категории статья остаётся, но без неё']
  title text [not null, note: 'Название (мин 1, макс 200 символов)']
  content_md text [not null, default: '', note: 'Контент в формате Markdown. Редактируется через Toast UI Editor (WYSIWYG ↔ Markdown)']
  field_values jsonb [not null, default: `'{}'`, note: 'Значения полей шаблона из категории: { key: value }. На сервере фильтруется по category.template_fields — чужие ключи отбрасываются']
  summary text [note: 'Автогенерируемое превью: первые 200 символов plain-текста (markdown → HTML → strip)']
  image_url text [note: 'URL обложки. /static/uploads/articles/<article_id>/<random>.ext. Загружается через POST /worlds/<id>/articles/<aid>/cover']
  is_pinned boolean [not null, default: false, note: 'Закреплённая статья (отображается первой в списке)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Обновляется при каждом autosave']

  note: 'Статьи (сущности мира). Автосейв с debounce 2 секунды на клиенте. Поля шаблона (field_values) сохраняются параллельно с content_md тем же эндпоинтом /autosave.'

  indexes {
    world_id [name: 'idx_articles_world_id']
    category_id [name: 'idx_articles_category_id']
    (world_id, updated_at) [name: 'ix_articles_world_updated']
  }
}

// ─────────────────────────────────────────────
// 5. СВЯЗИ МЕЖДУ СТАТЬЯМИ
// ─────────────────────────────────────────────

Table relations {
  id uuid [pk, default: `gen_random_uuid()`]
  world_id uuid [not null, ref: > worlds.id, note: 'Мир (для быстрых выборок графа без джойна через articles). ON DELETE CASCADE']
  source_article_id uuid [not null, ref: > articles.id, note: 'Источник связи. ON DELETE CASCADE']
  target_article_id uuid [not null, ref: > articles.id, note: 'Цель связи. ON DELETE CASCADE']
  label text [not null, note: 'Тип связи: «друг», «владеет», «находится в», «отец», «участвовал в»…']
  description text [note: 'Дополнительное описание связи (опционально)']
  created_at timestamptz [not null, default: `now()`]

  note: 'Именованные связи между статьями. Отображаются как рёбра на графе с градиентом source_color → target_color. Связь направленная (source → target), на графе видна стрелка. Запрещена связь статьи с самой собой (CHECK source_article_id <> target_article_id). Уникальна тройка (source, target, label) — нельзя дважды добавить ту же связь с тем же лейблом.'

  indexes {
    world_id [name: 'idx_relations_world_id']
    source_article_id [name: 'idx_relations_source']
    target_article_id [name: 'idx_relations_target']
    (source_article_id, target_article_id, label) [unique, name: 'uq_relations_source_target_label']
  }
}

// ─────────────────────────────────────────────
// 6. ЛОГ ДЕЙСТВИЙ АДМИНИСТРАТОРА
// ─────────────────────────────────────────────

Table admin_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  admin_id uuid [not null, ref: > users.id, note: 'Админ, совершивший действие. ON DELETE CASCADE']
  action text [not null, note: 'block_user | unblock_user | promote_admin | demote_admin | delete_world']
  target_user_id uuid [ref: > users.id, note: 'Целевой пользователь (если применимо). ON DELETE SET NULL — лог переживает удаление пользователя']
  target_world_id uuid [ref: > worlds.id, note: 'Целевой мир (если применимо). ON DELETE SET NULL']
  details jsonb [note: 'Доп. данные (например, при delete_world: { title, owner_email })']
  created_at timestamptz [not null, default: `now()`]

  note: 'Append-only журнал админ-действий. Записи никогда не редактируются и не удаляются (через приложение). Доступен только пользователям с role = admin (защита через @before_request в blueprint admin).'

  indexes {
    admin_id [name: 'idx_admin_logs_admin_id']
    created_at [name: 'idx_admin_logs_created_at']
    action [name: 'idx_admin_logs_action']
  }
}

// ============================================================
// ОТЛОЖЕННЫЕ СУЩНОСТИ (см. loregraph-flask/ROADMAP.md)
// ============================================================
// На v1 не реализованы. Здесь только как заметка о будущем —
// в актуальной БД этих таблиц нет.
//
// • tags                — свободные метки на статьи (M2M через article_tags)
// • article_tags        — связка статья ↔ тег
// • article_versions    — история редактирования статей с возможностью отката
// • bookmarks           — личные закладки пользователя на статьи
// • search_vector       — generated column для полнотекстового поиска (PG FTS)
//
// Подробности по каждой — в файле ROADMAP.md (раздел про каждую фичу).
